--- a/request/src/main/resources/application.properties
+++ b/request/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_request
+spring.datasource.url=jdbc:postgresql://localhost:6432/db_request
 spring.datasource.username=springuser
-spring.datasource.password=ThePassword1!
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.password=ThePassword
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#MySql
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_request
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
